# mmap

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/examples/: basic.rs  current.rs  dummy.rs  remote.rs
client/src/: error.rs  lib.rs  mmap.rs
example/: Cargo.toml
example-dll/: Cargo.toml
example-dll/src/: lib.rs
example/src/: main.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs
