[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
thiserror = "1.0.30"
pelite = "0.9.0"

winapi = { version = "0.3.9", features = ["winnt", "libloaderapi", "winuser", "errhandlingapi", "processthreadsapi", "synchapi"] }
ntapi = "0.3.6"

[dev-dependencies]
simple_logger = "1.16.0"
